[project]
name = "improvedthesis"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas>=2.3.3",
]

[dependency-groups]
dev = [
    "black>=25.11.0",
    "pre-commit>=4.4.0",
    "pytest>=9.0.0",
    "ruff>=0.14.4",
]
